Fix Evolution API authentication - use apikey header instead of Authorization header
- Updated production Edge Function to use 'apikey' header instead of 'Authorization' header
- Fixed compatibility with Evolution API v2.1.1 authentication requirements
- Deployed and verified working in production
- Both development and production environments now use correct authentication

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ VITE_WEBHOOK_URL=http://localhost:5173/api/webhook
 # EVOLUTION API CONFIGURATION (All server-side for security)
 VITE_EVOLUTION_API_URL=https://your-evolution-api.com
 EVOLUTION_API_KEY=your-evolution-api-key
-
+# WhatsApp Instance Configuration
+VITE_WHATSAPP_TARGET_INSTANCE=istn
 # OPENAI CONFIGURATION (Secret key - server-side only)
 OPENAI_API_KEY=sk-your-openai-api-key
 
