--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.0.0",
     "@whiskeysockets/baileys": "^6.7.18",
+    "axios": "^1.10.0",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.4",
@@ -54,6 +57,7 @@
     "react-router-dom": "^6.20.1",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.8.0",
+    "redis": "^5.5.6",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -80,14 +84,18 @@
     "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.16",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "express": "^5.1.0",
     "glob": "^11.0.3",
     "globals": "^15.12.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.1",
     "msw": "^2.0.8",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.4.31",
     "storybook": "^7.6.3",
     "supabase": "^1.123.4",
