--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -255,6 +255,10 @@ inspector_port = 8083
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 # entrypoint = "./functions/MY_FUNCTION_NAME/index.ts"
 
+# Configure webhook function to allow unauthenticated requests from Evolution API
+[functions.whatsapp-webhook]
+verify_jwt = false
+
 [analytics]
 enabled = true
 port = 54327
