fix: improve SPA routing configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
   "devCommand": "npm run dev",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/((?!api|_next|_static|favicon.ico).*)",
       "destination": "/index.html"
     }
   ],
