--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,7 @@
   "devCommand": "npm run dev",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/((?!api|_next|_static|favicon.ico).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
